--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
@@ -34,8 +34,8 @@
              data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">납품</h6>
-                <a class="collapse-item" th:href="@{/task/outgoing}">생산계획 납품</a>
-                <a class="collapse-item" th:href="@{/task/outgoing-select}">선택품 납품</a>
+<!--                <a class="collapse-item" th:href="@{/task/outgoing}">생산계획 납품</a>-->
+<!--                <a class="collapse-item" th:href="@{/task/outgoing-select}">선택품 납품</a>-->
                 <a class="collapse-item" th:href="@{/task/outgoing-manual}">수동 납품</a>
                 <a class="collapse-item" th:href="@{/task/order-history}">납품 현황</a>
             </div>
@@ -96,7 +96,7 @@
             <div class="bg-white py-2 collapse-inner rounded">
                 <div class="collapse-divider"></div>
                 <h6 class="collapse-header">품목 관리</h6>
-                <a class="collapse-item" th:href="@{/manage/part/bom}">BOM</a>
+<!--                <a class="collapse-item" th:href="@{/manage/part/bom}">BOM</a>-->
                 <a class="collapse-item" th:href="@{/manage/part/part}">부품</a>
             </div>
         </div>
