--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing.html
@@ -30,7 +30,7 @@
 
                 <!-- Page Heading -->
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                    <h1 class="h3 mb-0 text-gray-800">생산계획 납품</h1>
+                    <h1 class="h3 mb-0 text-gray-800">생산 계획</h1>
                 </div>
 
                 <div class="row justify-content-center mb-3">
